# local-ai

./: .gitignore  LICENSE  README.md  pyproject.toml
src/local_ai/: __init__.py
