[project]
name = "local-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.7",
    "langchain-openai>=1.3.0",
    "openai>=2.41.1",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"
